@@ -1,2 +1,5 @@
-  # cat=basic/enable; type=boolean; label=Enable the classic page module
+	# cat=basic/enable; type=boolean; label=Enable the classic Page module:Check this box to enable classic Page module in the list of modules.
 enable.oldPageModule = 0
+
+	# cat=basic/enable; type=boolean; label=Enable data source selection:If this checkbox is checked, page and content elements will have data source selector as they had in older TemplaVoila versions. If current installation has very few template objects, it is recommended to have this checkbox unchecked.
+enable.selectDataSource = 0
